# gps-lokace-app

./: android_manifest.tmpl.xml  buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
android/app/src/main/: AndroidManifest.xml
