[project]
name = "gps-lokace"
version = "1.0.0"
description = "Aplikace pro analýzu GPS lokací z Google Maps"
authors = [
    {name = "Tvoje jméno", email = "tvuj@email.com"}
]
dependencies = [
    "flet>=0.21.0"
]

[tool.flet]
module-name = "main"
app-name = "GPS Lokace"
app-description = "Analýza GPS souřadnic z Google Maps odkazů"
app-version = "1.0.0"

# Android specifické nastavení
[tool.flet.android]
package = "com.example.gpslokace"
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE"
]

# Ikona aplikace (volitelné)
# icon = "assets/icon.png"

# Orientace
orientation = "portrait"

# Téma
theme-mode = "light"